--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Projeto base da disciplina de padrões de projeto de software - UPE Campus Garanhuns</description>
 	<properties>
 		<java.version>11</java.version>
+		<sonar.organization>upe-garanhuns</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
