--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			</dependency>
+		<dependency>
+			 <groupId>org.jsoup</groupId>
+			 <artifactId>jsoup</artifactId>
+			 <version>1.15.1</version>
+			</dependency>
 	</dependencies>
 
 	<build>
