--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
 			<artifactId>gson</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		
+
+		<dependency>
+    	<groupId>org.jsoup</groupId>
+   		 <artifactId>jsoup</artifactId>
+    		<version>1.15.1</version>
+			</dependency>
+		
 		<dependency>
   <groupId>commons-io</groupId>
   <artifactId>commons-io</artifactId>
